# dagster-xarray

./: README.md  pyproject.toml
src/dagster_xarray/: __init__.py  xarray_zarr_io_manager.py
